--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,3 +1,5 @@
-@import "ibs/bootstrap-reboot.min"
+@import 'libs/bootstrap-reboot.min'
+@import 'base/variables'
 
-@import "variables"
+*
+	font-family: 'Roboto', sans-serif
