add responsive for header

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,8 +1,6 @@
 @import 'libs/bootstrap-reboot.min'
 @import 'base/variables'
 
-@import 'blocks/_header'
-
 *
     font-family: 'Roboto', sans-serif
 
@@ -19,3 +17,7 @@ html
 
 .container
     padding: 0 20px
+
+
+@import 'blocks/_header'
+@import 'blocks/_media'
