--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,13 +1,18 @@
 @import 'libs/bootstrap-reboot.min'
+@import 'libs/_fonts'
 @import 'base/variables'
 
-*
-    font-family: 'Roboto', sans-serif
 
 body, 
 html 
     min-width: 320px
     height: 100%
+
+*
+    font-family: 'Roboto-Regular', 'Arial', 'sans-serif'
+    font-size: 16px
+    line-height: 100%
+    font-weight: 400
 
 .page
     min-height: 100vh
@@ -18,6 +23,17 @@ html
 .container
     padding: 0 20px
 
+h1, 
+h2, 
+h3,
+h4, 
+h5, 
+h6
+    margin: 0
+
+
 
 @import 'blocks/_header'
 @import 'blocks/_media'
+@import 'blocks/_promo'
+
