add slick slider

--- a/src/sass/blocks/_promo.sass
+++ b/src/sass/blocks/_promo.sass
@@ -7,9 +7,14 @@
     background: #4A4A4A
     // &__item 
     &__title
+        padding: 36px 0 28px 
+        font-family: 'RobotoCondensed-Regular'
+        font-size: 1.75em
         font-weight: 400
-        font-size: 28px
+        text-transform: uppercase
         text-align: center
+        line-height: 100%
+        letter-spacing: 0.1em
         color: #fff 
 
 
