--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,5 +1,9 @@
 @import 'libs/bootstrap-reboot.min'
-@import 'libs/_fonts'
+@import 'libs/fonts'
+@import '../libs/slick.scss'
+
+
+
 @import 'base/variables'
 
 
@@ -10,9 +14,6 @@ html
 
 *
     font-family: 'Roboto-Regular', 'Arial', 'sans-serif'
-    font-size: 16px
-    line-height: 100%
-    font-weight: 400
 
 .page
     min-height: 100vh
