--- a/src/sass/blocks/_promo.sass
+++ b/src/sass/blocks/_promo.sass
@@ -4,17 +4,65 @@
 
 
 .top-slider
-    background: #4A4A4A
-    // &__item 
+    background: rgba(33, 33, 33, 0.5)
+    &__item
+        min-height: 193px
+        text-align: center
+        color: #fff 
     &__title
+        position: relative
         padding: 36px 0 28px 
+        margin: 0 auto
+        max-width: 243px
         font-family: 'RobotoCondensed-Regular'
         font-size: 1.75em
         font-weight: 400
         text-transform: uppercase
-        text-align: center
         line-height: 100%
         letter-spacing: 0.1em
-        color: #fff 
+        &::after
+            content: ''
+            width: 61px
+            height: 8px
+            position: absolute
+            left: 0
+            right: 0
+            bottom: 0
+            margin: 0 auto
+            background-color: $text-color
+    &__descr
+        display: none            
+    &__btn 
+        display: none
+        
+        
+    .slick
+        &-dots 
+            display: flex
+            justify-content: center
+            position: absolute
+            bottom: 20px
+            left: 0
+            right: 0
+            button
+                margin: 0 10px
+                padding: 0
+                width: 10px
+                height: 10px
+                border-radius: 50%
+                font-size: 0
+                border: none
+                background-color: $main-color
+        &-active > button
+            background-color: transparent
+            outline: none
+            border: none
+            border: 1px solid #476E4D
+        &-arrow
+            visibility: hidden
+
+
+        
+
 
 
