--- a/src/sass/blocks/_services.sass
+++ b/src/sass/blocks/_services.sass
@@ -4,7 +4,6 @@
     font-family: 'Roboto Condensed'
     &__title
         margin-bottom: 47px
-        font-style: normal
         font-weight: 400
         font-size: 38px
         letter-spacing: 2px
@@ -44,6 +43,14 @@
                 padding: 40px 16px
                 min-height: 277px
                 border: 4px solid $main-color
+        &-name
+            margin-bottom: 30px
+            font-family: 'RobotoCondensed-Bold'
+            font-weight: 700
+            line-height: 19px
+            letter-spacing: 2px
+            font-size: 16px
+            color: $text-color
         &-icons
             margin-bottom: 14px
         &-text
@@ -61,13 +68,6 @@
             text-decoration: none
             text-transform: uppercase
             color: $main-color
-    &__name
-        margin-bottom: 30px
-        font-family: 'RobotoCondensed-Bold'
-        font-weight: 700
-        line-height: 19px
-        letter-spacing: 2px
-        font-size: 16px
-        color: $text-color
+   
 
 
