--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -39,6 +39,8 @@ h6
 a
     text-decoration: none
     color: inherit
+    &:hover
+        text-decoration: none
 
 ul,
 ol,
@@ -72,5 +74,6 @@ button
 @import 'blocks/_promo'
 @import 'blocks/_call'
 @import 'blocks/_services'
+@import 'blocks/_projects'
 @import 'blocks/_media'
 
