add team section

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -75,5 +75,6 @@ button
 @import 'blocks/_call'
 @import 'blocks/_services'
 @import 'blocks/_projects'
+@import 'blocks/_team'
 @import 'blocks/_media'
 
