add adaptive to projects section for 768px

--- a/src/sass/blocks/_media.sass
+++ b/src/sass/blocks/_media.sass
@@ -96,6 +96,21 @@
             &-icons
                 margin-bottom: 14px
 
+    .projects 
+        padding: 60px 0 20px
+        &__item 
+            &-img 
+                padding: 5px 20px
+                max-width: 318px
+                max-height: 460px
+                border-radius: 4px
+            &__inner
+                min-height: 417px
+            &-link
+                font-size: 20px
+                line-height: 23px
+
+
 
 @media (min-width: 768px)
     .container
@@ -156,6 +171,21 @@
                 .services__item-inner
                     padding: 35px 60px 5px 
                     min-height: 288px
+
+    .projects 
+        padding: 80px 0 60px
+        &__item 
+            &-img 
+                padding: 5px 20px
+                max-width: 318px
+                max-height: 460px
+                border-radius: 4px
+            &__inner
+                min-height: 417px
+            &-link
+                padding: 30px 0
+                font-size: 20px
+                line-height: 23px
              
 
 @media (min-width: 1024px)
