--- a/src/sass/blocks/_projects.sass
+++ b/src/sass/blocks/_projects.sass
@@ -23,10 +23,14 @@
             background-color: #fff
     &__item 
         &-img 
+            padding: 12px 14px
             margin: 0 auto
             display: block
-            max-width: 268px
-            max-height: 250px
+            min-width: 268px
+            min-height: 250px
+            background-position: center
+            background-repeat: no-repeat
+            background-size: cover
             border-radius: 4px
             &:hover
                 .projects__item-inner
