add adaptive for team section

--- a/src/sass/blocks/_media.sass
+++ b/src/sass/blocks/_media.sass
@@ -110,6 +110,20 @@
                 font-size: 20px
                 line-height: 23px
 
+    .team 
+        padding: 46px 0 53px
+        &__img 
+            margin-bottom: 46px
+        &__title 
+            margin-bottom: 40px
+            font-size: 36px
+        &__text         
+            margin-bottom: 56px
+        &__btn 
+            padding: 21px 26px
+            font-size: 20px
+
+
 
 
 @media (min-width: 768px)
@@ -187,6 +201,29 @@
                 min-height: 256px
             &-link
                 padding: 30px 0
+
+    .team 
+        padding: 40px 0 48px
+        text-align: left
+        &__inner
+            display: flex
+        &__img 
+            margin-bottom: 0px
+            margin-right: 34px
+            height: 100%
+            width: 240px
+        &__title 
+            margin-bottom: 28px
+            font-size: 36px
+            line-height: 106%
+            &::after
+                margin-left: 0
+        &__text         
+            margin-bottom: 30px
+            font-size: 18px
+        &__btn 
+            padding: 21px 26px
+            font-size: 18px
              
 
 @media (min-width: 1024px)
@@ -249,6 +286,19 @@
             &-img 
                 margin: 0 12px
                 min-width: 318px
+
+    .team 
+        padding: 80px
+        &__img 
+            margin-right: 60px
+            width: 395px
+        &__title 
+            margin-top: 10
+            margin-bottom: 19px
+            font-size: 48px        
+        &__text         
+            margin-bottom: 20px
+            line-height: 24px
      
 
 @media (min-width: 1440px)
@@ -326,3 +376,14 @@
             &-img 
                 margin: 0 
 
+    .team 
+        padding: 50px 0 110px
+        &__img 
+            margin-right: 93px
+            width: 470px
+        &__title 
+            margin-bottom: 40px
+            font-size: 48px        
+        &__text         
+            margin-bottom: 40px
+            line-height: 24px
