--- a/src/sass/blocks/_team.sass
+++ b/src/sass/blocks/_team.sass
@@ -4,6 +4,7 @@
     &__img 
         margin-bottom: 40px
         width: 100%
+        border-radius: 4px
     &__title 
         margin-bottom: 50px
         position: relative
@@ -19,7 +20,7 @@
             bottom: -20px
             right: 0
             left: 0
-            width: 45px
+            width: 100px
             height: 8px
             background-color: $main-color 
     &__text         
@@ -27,6 +28,7 @@
     &__btn 
         padding: 21px 26px
         text-transform: uppercase
+        font-weight: 500
         border: none
         border-radius: 3px
         transition: 0.5s all
