add quote section

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -76,5 +76,6 @@ button
 @import 'blocks/_services'
 @import 'blocks/_projects'
 @import 'blocks/_team'
+@import 'blocks/_quote'
 @import 'blocks/_media'
 
