add adaptive for quote section

--- a/src/sass/blocks/_quote.sass
+++ b/src/sass/blocks/_quote.sass
@@ -2,7 +2,7 @@
     padding: 60px 0 55px
     text-align: center    
     font-family: 'Roboto Condensed'
-    color: $text-color
+    background: linear-gradient(180deg, #2B4074 0%, rgba(43, 64, 116, 0) 100%)
     &__img
         margin-bottom: 58px
     &__text 
@@ -11,6 +11,7 @@
         font-weight: 400
         font-size: 24px
         line-height: 108%
+        color: #fff
     &__blue
         font-family: 'RobotoCondensed-Bold'
         font-weight: 700
@@ -20,4 +21,4 @@
         font-weight: 700
         font-size: 20px
         letter-spacing: 2px
-
+        color: #fff
