--- a/src/sass/blocks/_media.sass
+++ b/src/sass/blocks/_media.sass
@@ -123,6 +123,17 @@
             padding: 21px 26px
             font-size: 20px
 
+    .quote 
+        padding: 60px 0 40px
+        text-align: center    
+        font-family: 'Roboto Condensed'
+        color: $text-color
+        &__img
+            margin-bottom: 40px
+        &__text 
+            margin: 0 auto 40px
+            width: 100%
+            font-size: 32px
 
 @media (min-width: 768px)
     .container
@@ -222,6 +233,18 @@
         &__btn 
             padding: 21px 26px
             font-size: 18px
+
+    .quote 
+        padding: 60px 0 40px
+        text-align: center    
+        font-family: 'Roboto Condensed'
+        color: $text-color
+        &__img
+            margin-bottom: 40px
+        &__text 
+            margin: 0 auto 40px
+            font-size: 32px
+             
              
 
 @media (min-width: 1024px)
@@ -386,3 +409,6 @@
             margin-bottom: 40px
             line-height: 24px
 
+    .quote 
+        &__text 
+            font-size: 36px
