--- a/src/sass/blocks/_team.sass
+++ b/src/sass/blocks/_team.sass
@@ -1,6 +1,7 @@
 .team 
     padding: 20px 0 40px
     text-align: center
+    background: $bg-color
     &__img 
         margin-bottom: 40px
         width: 100%
