--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -77,5 +77,6 @@ button
 @import 'blocks/_projects'
 @import 'blocks/_team'
 @import 'blocks/_quote'
+@import 'blocks/_footer'
 @import 'blocks/_media'
 
