add adaptive to footer

--- a/src/sass/blocks/_footer.sass
+++ b/src/sass/blocks/_footer.sass
@@ -2,7 +2,7 @@
     padding: 55px 0 40px
     text-align: center
     background: $main-color
-    &__tile 
+    &__title 
         margin: 0 auto 43px
         max-width: 84%
         font-family: 'Roboto-Regular'
